[tool.poetry]
name = "docs_src"
version = "0.1.0"
description = ""
authors = ["Koh M. Nakagawa <ko.nakagawa@ffri.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "^1.1.2"
mkdocs-material = "^7.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
